重构HDFSDemo